# QRForge

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/qrcode_service/: __init__.py  config.py  database.py  main.py  middleware.py  redis_client.py
src/qrcode_service/api/: dependencies.py
src/qrcode_service/api/v1/: analytics.py  codes.py  generate.py  router.py  scan.py
src/qrcode_service/generators/: __init__.py  barcode_generator.py  base.py  logo_embedder.py  qr_generator.py
src/qrcode_service/models/: __init__.py  code.py  scan_event.py
src/qrcode_service/repositories/: __init__.py  code_repo.py  scan_event_repo.py
src/qrcode_service/schemas/: __init__.py  analytics.py  code.py
src/qrcode_service/services/: __init__.py  analytics_service.py  code_service.py  scan_service.py
src/qrcode_service/worker/: arq_worker.py  tasks.py
tests/: conftest.py
tests/integration/: test_generate_api.py  test_scan_tracking.py
tests/unit/: test_barcode_generator.py  test_logo_embedder.py  test_qr_generator.py
